# Modern-Software-Engineering-Course-Assignment

./: .gitignore  CMakeLists.txt  Makefile  PROJECT_STRUCTURE.md  README.md  modification_log.txt  temp.html
docs/: feature_updates.md  project_report.md  run_with_mysql.md
include/backend/: Attendance.hpp  CodeStats.hpp  CodeStatsFacade.hpp  GameEngine.hpp  Logger.hpp  RedEnvelope.hpp  Tank.hpp
include/frontend/: ConsoleUI.hpp  LayoutManager.hpp  WebServer.hpp
sql/: attendance_init.sql
src/backend/: Attendance.cpp  CodeStats.cpp  CodeStatsFacade.cpp  GameEngine.cpp  Logger.cpp  RedEnvelope.cpp  Tank.cpp
src/frontend/: ConsoleUI.cpp  LayoutManager.cpp  WebServer.cpp  WebServerAttendance.cpp  main.cpp
web/: index.html
